# temp-project

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .sentryignore  README.md  build-openapi.sh  build-openapi.ts  cdk.context.json  cdk.json  cdktf.json  cypress.config.ts  diff.txt  ellipsis.yaml  fetch-openapi.sh  jest-setup.ts  jest-teardown.ts  jest.config.js  local-api-server.ts  openapi.yaml  package-lock.json  package.json  rule.yaml  run.ts  samconfig.toml  template.yaml  tsconfig.infra.json  tsconfig.json  webpack.config.ts
databricks/: .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  pyproject.toml
databricks/data/: currency_rates_backfill.json
databricks/dlt/: __init__.py  pipeline.py
databricks/fixtures/: currency.json  transaction_processed.json
databricks/infra/: .prettierignore  cdktf.json  deploy.sh  init.sh.tftpl  main.ts  package-lock.json  package.json
databricks/notebooks/: backfill.py  pipeline.py
databricks/openapi/: model.mustache  model_anyof.mustache  model_enum.mustache  model_oneof.mustache  model_simple.mustache
databricks/src/: entities.py  entities_test.py  version_service.py
databricks/src/athena/: schema.py
databricks/src/aws/: glue.py  s3.py
databricks/src/dbutils/: dbutils.py
databricks/src/dlt/: backfill.py  backfill_test.py  cdc.py  (+7 more)
databricks/tests/: test_dlt.py  test_dlt_pipeline.py
raptor/: .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  cdk.json  pack_models.sh  package.json  pyproject.toml
raptor/config/: app-config.json
raptor/infra/: cdk-raptor.ts  cdk.json  config.json  deploy.sh  nuke_deployment.sh  package-lock.json  package.json
raptor/models/: README.MD
raptor/notebooks/: EDA-Anomaly-Detection.ipynb  Model.ipynb
raptor/script/: trigger_tests.sh
raptor/src/: exception.py  logger.py
viper/: .pylintrc  Makefile  README.md  pyproject.toml
viper/data/: currency_rates_backfill.json
viper/fixtures/: currency.json  dynamic_risk_value.json  transaction.json
viper/infra/: .gitignore  cdktf.json  jest.config.js  main.ts  package.json
viper/openapi/: datatypes.mustache  primitive.mustache
viper/src/: version_service.py
(+6866 files in other folders)
