[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Tim Coulson <tim@flagright.com>"]
include = ["src/openapi/**/*.py"]

[tool.poetry.dependencies]
python = "^3.10.2"
pyspark = "3.2.2"
openapi-python-client = "^0.16.0"
boto3 = "^1.34.2"
pymongo = "^4.6.1"
pyyaml = "v6.0.1"
boto3-stubs = "^1.34.3"
databricks-sdk = "^0.17.0"
sentry-sdk = "^1.40.6"
types-requests = "^2.31.0.20240311"
mypy = "1.9.0"
delta-spark = "2"

[tool.poetry.dev-dependencies]
coverage = "^6.4"
pylint = "^2.13.9"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^1.9.0"
databricks-cli = "0.18.0"
pre-commit = "^2.19.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
generate = "sh: generate.sh"
