[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Nadig <nadig@flagright.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
coverage = "^6.4"
pylint = "^2.13.9"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^1.9.0"
pre-commit = "^2.19.0"
pytest = "^7.4.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
